[package]
name = "nyacc"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
derive-new = "0.7"
nyacc_proc = {path = "./lib/proc"}
anyhow = "1.0"
clap = { version = "4.5.35", features = ["derive"] }
